add: key-manager-01-02 check
